<resources>
    <string name="app_name">Vertretungsplan Gym Wen</string>
    <string name="app_icon">App Icon</string>
    <string name="login_username">Nutzername</string>
    <string name="login_password">Passwort</string>
    <string name="login">Anmelden</string>
    <string name="channel_name">Vertretungsplan Update Channel</string>
    <string name="channel_description">Der Channel für alle Vertretungsplan Updates und für
        zeitliche Benachrichtigungen</string>
    <string name="website">Webseite</string>
    <string name="open">Öffnen</string>
    <string name="close">Schließen</string>
    <string name="vertretung">Vertretung</string>
    <string name="action_settings">Settings</string>
    <string name="entfällt">Entfällt!</string>
    <string name="logout">Ausloggen</string>
    <string name="wrong_credentials">Nutzername oder Passwort Falsch!</string>
    <string name="title_activity_no_network">NoNetworkActivity</string>
    <string name="service_not_available">Leider ist der Dienst zur Zeit nicht erreichbar! Überprüfe deine Internetverbindung und versuche es erneut!</string>
    <string name="network_error">Netzwerkfehler!</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="name">Name</string>
    <string name="subject">Betreff</string>
    <string name="description">Beschreibung</string>
    <string name="issue_description">Bitte beschreiben Sie das Problem möglichst genau! Ihre Anfrage wird als Email versendet. Es ist möglich, dass wir Sie über die Email erneut kontaktieren um mehr über das Problem herauszufinden. Danke für Ihre Hilfe!</string>
    <string name="empty_text">Du musst alle Felder ausfüllen!</string>
    <string name="send_email">Email senden...</string>
    <string name="no_email_client">Es wurde kein Email-Client auf deinem Gerät gefunden!</string>
    <string name="report_issue">Problem melden</string>
    <string name="developer_mail">codecropsdev@gmail.com</string>
    <string name="no_data_description">Auf dem Server sind keine Daten zum heutigen Tag vorhanden! Versuche es später erneut.</string>
    <string name="today">Heute</string>
    <string name="next_day">Nächster Schultag</string>
    <string name="today_complete">Heute</string>
    <string name="next_day_complete">Nächster Schultag</string>
    <string name="no_data">Keine Daten</string>
    <string name="contact">Kontakt</string>
    <string name="feature_description">Bitte beschreiben Sie das Feature möglichst genau! Ihre Anfrage wird als Email versendet. Es ist möglich, dass wir Sie über die Email erneut kontaktieren um mehr über das Feature zu erfahren.</string>
    <string name="feedback_description">Wir freuen uns über jedes Feedback!</string>
    <string name="feature_request">Feature anfragen</string>
    <string name="feedback">Feedback geben</string>
    <string name="info">Info</string>
    <string name="info_text">Diese App wurde durch CodeCrops von Luca Preibsch und Yannik Schmidt entwickelt. ... !</string>
    <string name="settings">Einstellungen</string>
    <string name="twitter_text">Besuche uns auf Twitter!</string>
    <string name="klasse">Klassenfilter</string>
    <string name="choose_grade">Wähle deine Stufe</string>
    <string name="choose_course">Wähle deine Kurse</string>
    <string name="choose_klasse">Wähle deine Klasse</string>
    <string name="course">Kursname</string>
    <string name="no_vertretung">Leider gibt es heute keine Vertretungen für deine eingetragenen Kurse.</string>
    <string name="old_data">Der Dienst ist zurzeit nicht erreichbar! Die Daten sind möglicherweise veraltet.</string>
    <string name="shared_preferences_settings_path">de.codecrops.vertretungsplangymwen.SettingsPREF</string>
    <string name="shared_preferences_settings_klassen">AttendedClasses</string>
    <string name="shared_preferences_settings_background_refresh_master">BackgroundRefreshMaster</string>
    <string name="shared_preferences_settings_background_refresh_smart">BackgroundRefreshSmart</string>
    <string name="shared_preferences_settings_background_refresh_auto">BackgroundRefreshAuto</string>
    <string name="shared_preferences_settings_background_refresh_auto_interval">BackgroundRefreshAutoInterval</string>
    <string name="shared_preferences_settings_background_refresh_auto_clock">BackgroundRefreshAutoClock</string>
    <string name="shared_preferences_settings_notifications_master">NotificationMaster</string>
    <string name="shared_preferences_settings_notifications_vibration">NotificationVibration</string>
    <string name="shared_preferences_settings_notification_sound">NotificationSound</string>
    <string name="settings_notification_master_title">Benachrichtigungen erhalten</string>
    <string name="settings_notification_use_vibration">Vibration verwenden</string>
    <string name="settings_notification_use_sound">Ton verwenden</string>
    <string name="settings_refresh_master_title">Hintergrundaktualisierung</string>
    <string name="settings_refresh_smartmode_title">SmartModus</string>
    <string name="settings_refresh_automode_title">AutomatikModus</string>
    <string name="settings_refresh_auto_interval_title">Pause zwischen Aktualisierungen:</string>
    <string name="course_already_in_database">Dieser Kurs befindet sich bereits in der Datenbank!</string>
    <string name="vertretungsplan">Vertretungsplan</string>
</resources>
