<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title="Gefiltert" >
        <menu>
            <group>
                <item
                    android:id="@+id/today"
                    android:title="@string/today" />
                <item
                    android:id="@+id/tomorrow"
                    android:title="@string/tomorrow" />
            </group>
        </menu>
    </item>
    <item android:title="Komplett">
        <menu>
            <group>
                <item
                    android:id="@+id/today_complete"
                    android:title="@string/today_complete" />
                <item
                    android:id="@+id/tomorrow_complete"
                    android:title="@string/tomorrow_complete" />
            </group>
        </menu>
    </item>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/website"
            android:title="@string/website" />
        <item
            android:id="@+id/logout"
            android:title="@string/logout" />
        <item
            android:id="@+id/help"
            android:title="@string/report_issue" />
    </group>
</menu>